--- a/GenomeHacker.vcxproj.filters
+++ b/GenomeHacker.vcxproj.filters
@@ -159,9 +159,6 @@
     <ClInclude Include="shader_manager.h">
       <Filter>ヘッダー ファイル\manager</Filter>
     </ClInclude>
-    <ClInclude Include="hedder\object\ui\button.h">
-      <Filter>ヘッダー ファイル\object\ui</Filter>
-    </ClInclude>
     <ClInclude Include="particle.h">
       <Filter>ヘッダー ファイル\lib</Filter>
     </ClInclude>
@@ -248,6 +245,12 @@
     </ClInclude>
     <ClInclude Include="hedder\enemy\base_data\slime.h">
       <Filter>ヘッダー ファイル\enemy\base_data</Filter>
+    </ClInclude>
+    <ClInclude Include="hedder\lib\transform.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="hedder\object\ui\button.h">
+      <Filter>ヘッダー ファイル\object\ui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -383,6 +386,12 @@
     <ClCompile Include="cpp\enemy\base_data\slime.cpp">
       <Filter>ソース ファイル\enemy\base_data</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\collider\collision.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\collider\sphere.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shader\unlitTextureVS.hlsl">
@@ -400,6 +409,8 @@
     <FxCompile Include="shader\unlitTextureWithNoAlphaVS.hlsl">
       <Filter>リソース ファイル</Filter>
     </FxCompile>
+    <FxCompile Include="shader\debugPS.hlsl" />
+    <FxCompile Include="shader\debugVS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig">
