--- a/GenomeHacker.vcxproj.filters
+++ b/GenomeHacker.vcxproj.filters
@@ -108,9 +108,6 @@
     <ClInclude Include="hedder\scene\base_scene.h">
       <Filter>ヘッダー ファイル\scene</Filter>
     </ClInclude>
-    <ClInclude Include="hedder\collider\sphere.h">
-      <Filter>ヘッダー ファイル\collider</Filter>
-    </ClInclude>
     <ClInclude Include="hedder\collider\collider_base.h">
       <Filter>ヘッダー ファイル\collider</Filter>
     </ClInclude>
@@ -246,6 +243,12 @@
     <ClInclude Include="hedder\object\ui\button.h">
       <Filter>ヘッダー ファイル\object\ui</Filter>
     </ClInclude>
+    <ClInclude Include="hedder\object\ui\in_game\fade.h">
+      <Filter>ヘッダー ファイル\object\ui\in_game</Filter>
+    </ClInclude>
+    <ClInclude Include="hedder\collider\sphere.h">
+      <Filter>ヘッダー ファイル\collider</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -380,6 +383,9 @@
     <ClCompile Include="cpp\collider\sphere.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\object\ui\in_game\fade.cpp">
+      <Filter>ソース ファイル\object\ui\in_game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shader\unlitTextureVS.hlsl">
@@ -397,8 +403,18 @@
     <FxCompile Include="shader\unlitTextureWithNoAlphaVS.hlsl">
       <Filter>リソース ファイル</Filter>
     </FxCompile>
-    <FxCompile Include="shader\debugPS.hlsl" />
-    <FxCompile Include="shader\debugVS.hlsl" />
+    <FxCompile Include="shader\fadeVS.hlsl">
+      <Filter>リソース ファイル</Filter>
+    </FxCompile>
+    <FxCompile Include="shader\fadePS.hlsl">
+      <Filter>リソース ファイル</Filter>
+    </FxCompile>
+    <FxCompile Include="shader\debugPS.hlsl">
+      <Filter>リソース ファイル</Filter>
+    </FxCompile>
+    <FxCompile Include="shader\debugVS.hlsl">
+      <Filter>リソース ファイル</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig">
