--- a/GenomeHacker.vcxproj.filters
+++ b/GenomeHacker.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClInclude Include="hedder\collider\sphere.h">
       <Filter>ヘッダー ファイル\collider</Filter>
     </ClInclude>
+    <ClInclude Include="hedder\enemy\node\move_x.h">
+      <Filter>ヘッダー ファイル\enemy\node</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -385,6 +388,9 @@
     </ClCompile>
     <ClCompile Include="cpp\object\ui\in_game\fade.cpp">
       <Filter>ソース ファイル\object\ui\in_game</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\enemy\node\move_x.cpp">
+      <Filter>ソース ファイル\enemy\node</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
