--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="hedder\collider\cube.h" />
     <ClInclude Include="hedder\collider\sphere.h" />
     <ClInclude Include="hedder\enemy\base_data\enemy_base.h" />
+    <ClInclude Include="hedder\enemy\base_data\enemy_list.h" />
     <ClInclude Include="hedder\enemy\base_data\minotaur.h" />
     <ClInclude Include="hedder\enemy\base_data\slime.h" />
     <ClInclude Include="hedder\enemy\bullet.h" />
@@ -57,6 +58,7 @@
     <ClInclude Include="hedder\object\field.h" />
     <ClInclude Include="hedder\object\game_object.h" />
     <ClInclude Include="hedder\object\panel.h" />
+    <ClInclude Include="hedder\object\system_object.h" />
     <ClInclude Include="hedder\object\ui\button.h" />
     <ClInclude Include="hedder\object\ui\image.h" />
     <ClInclude Include="hedder\object\ui\in_game\enemy_node.h" />
@@ -85,6 +87,7 @@
     <ClCompile Include="cpp\collider\collision.cpp" />
     <ClCompile Include="cpp\collider\sphere.cpp" />
     <ClCompile Include="cpp\enemy\base_data\enemy_base.cpp" />
+    <ClCompile Include="cpp\enemy\base_data\enemy_list.cpp" />
     <ClCompile Include="cpp\enemy\base_data\minotaur.cpp" />
     <ClCompile Include="cpp\enemy\base_data\slime.cpp" />
     <ClCompile Include="cpp\enemy\bullet.cpp" />
