とりあえずエラーなしの状態に。state等々変更しないといけない箇所多め

--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -77,6 +77,10 @@
     <ClInclude Include="hedder\scene\manager.h" />
     <ClInclude Include="hedder\scene\setting_scene.h" />
     <ClInclude Include="hedder\scene\state\base_state.h" />
+    <ClInclude Include="hedder\scene\state\dna_edit_state.h" />
+    <ClInclude Include="hedder\scene\state\dna_table_state.h" />
+    <ClInclude Include="hedder\scene\state\game_base_state.h" />
+    <ClInclude Include="hedder\scene\state\state_manager.h" />
     <ClInclude Include="hedder\scene\title_scene.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="particle.h" />
@@ -136,6 +140,8 @@
     <ClCompile Include="cpp\scene\manager.cpp" />
     <ClCompile Include="cpp\scene\setting_scene.cpp" />
     <ClCompile Include="cpp\scene\state\base_state.cpp" />
+    <ClCompile Include="cpp\scene\state\dna_table_state.cpp" />
+    <ClCompile Include="cpp\scene\state\state_manager.cpp" />
     <ClCompile Include="cpp\scene\title_scene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="particle.cpp" />
