--- a/GenomeHacker.vcxproj.filters
+++ b/GenomeHacker.vcxproj.filters
@@ -285,6 +285,18 @@
     <ClInclude Include="hedder\scene\state\base_state.h">
       <Filter>ヘッダー ファイル\scene\state</Filter>
     </ClInclude>
+    <ClInclude Include="hedder\scene\state\dna_table_state.h">
+      <Filter>ヘッダー ファイル\scene\state</Filter>
+    </ClInclude>
+    <ClInclude Include="hedder\scene\state\state_manager.h">
+      <Filter>ヘッダー ファイル\scene\state</Filter>
+    </ClInclude>
+    <ClInclude Include="hedder\scene\state\dna_edit_state.h">
+      <Filter>ヘッダー ファイル\scene\state</Filter>
+    </ClInclude>
+    <ClInclude Include="hedder\scene\state\game_base_state.h">
+      <Filter>ヘッダー ファイル\scene\state</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -454,6 +466,12 @@
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\scene\state\dna_table_state.cpp">
+      <Filter>ソース ファイル\scene\state</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\scene\state\state_manager.cpp">
+      <Filter>ソース ファイル\scene\state</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
